SERVER-20689 improve diagnostics in the case that we leak an exception from an IO worker thread